[project]
name = "france-solar-grid-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
]
