[project]
name = "integration-solaire-reseau-france"
version = "0.1.0"
description = "Analyse de l'intégration du solaire dans le réseau électrique français (données RTE/Enedis via ODRE)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
    "spyder-kernels>=3.1.5",
]
